# purgedb

./: .gitignore  Cargo.toml  README.md  test.db
.github/workflows/: rust.yaml
src/: app.rs  logging.rs  main.rs  search.rs  types.rs
src/db/: history.rs  mod.rs
src/gui/: dropdown.rs  edit_filament.rs  enter_purge.rs  enter_purge2.rs  filament_grid.rs  filament_picker.rs  filament_picker_widget.rs  get_purge.rs  history_tab.rs  list_calibrations.rs  mod.rs  new_filament.rs  options.rs  text_val.rs
src/input_sender/: automation.rs  mod.rs
