[package]
name = "purgedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
bitflags = "2.4.1"
eframe = { version = "0.28.1", features = ["persistence"] }
egui = "0.28.1"
egui_extras = "0.28.1"
env_logger = "0.11.5"
# fuzzy-matcher = "0.3.7"
hex_color = { version = "3.0.0", features = ["serde"] }
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.193", features = ["derive"] }
ahash = "0.8.11"
nucleo = "0.5.0"
# log = "0.4.22"
regex = "1.10.6"
chrono = { version = "0.4.38", features = ["serde"] }
# sqlx = { version = "0.8", features = [
#     "runtime-tokio",
#     "sqlite",
#     "derive",
#     "chrono",
#     "uuid",
# ] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "local-time",
    "env-filter",
    "json",
    "registry",
] }

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    # "UI",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
