[package]
name = "purgedb"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
bitflags = "2.9.0"
eframe = { version = "0.31.1", features = ["persistence"] }
egui = "0.31.1"
egui_extras = "0.31.1"
env_logger = "0.11.7"
# fuzzy-matcher = "0.3.7"
hex_color = { version = "3.0.0", features = ["serde"] }
rand = "0.9.0"
rusqlite = { version = "0.34.0", features = ["bundled", "backup"] }
serde = { version = "1.0.219", features = ["derive"] }
ron = { version = "0.8.1" }
ahash = "0.8.11"
nucleo = "0.5.0"
# log = "0.4.22"
regex = "1.11.1"
chrono = { version = "0.4.40", features = ["serde"] }
# sqlx = { version = "0.8", features = [
#     "runtime-tokio",
#     "sqlite",
#     "derive",
#     "chrono",
#     "uuid",
# ] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
    "local-time",
    "env-filter",
    "json",
    "registry",
] }
rfd = "0.15.3"

[target.'cfg(windows)'.dependencies]
uiautomation = "0.17.3"
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "UI",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "UI_UIAutomation_Core",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
] }
